# ME_Inventory_App_Tauri_v2

./: .gitignore  AGENT_RUNBOOK.md  CLEANUP_CHECKLIST.md  PERFORMANCE_BASELINE.md  PORTING_TODO.md  README.md  eslint.config.js  guidelines.md  index.html  package.json  tsconfig.app.json  vite.config.ts
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: lib.rs  main.rs
backend/tests/: performance_baseline.rs  shared_sync_flow.rs  sync_conflict_flow.rs  sync_core.rs
data/: me_inventory.db  me_lab_inventory.db
docs/: MEMORY_LEAK_AUDIT.md  desktop-smoke-checklist.md  installer-smoke-2026-04-26-worker-a.md  manual-smoke-2026-04-26-syed.md  post-picture-fix-smoke-2026-04-26.md  release-qa-2026-04-26-manager.md  sync-architecture-next-slice.md
docs/engineering/: AGENT_RUNBOOK.md  CLEANUP_CHECKLIST.md  CODE_BEHAVIOR_AUDIT.md  DONE_CHECKLIST.md  (+3 more)
scripts/: performance-baseline.test.tsx  smoke-sync-one-machine.ps1
src/: App.tsx  branding.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  export.rs  legacy_import.rs  lib.rs  model.rs  native.rs  query.rs  store.rs  sync.rs  updater.rs
src-tauri/src/legacy_import/: paths.rs  sqlite.rs
src-tauri/src/store/: entries.rs  keys.rs  metadata.rs  sync_state.rs  tests.rs
src-tauri/src/sync/: apply.rs  conflicts.rs  operation_file.rs  queue.rs  scanning.rs  shared_paths.rs  types.rs
src-tauri/tests/: performance_baseline.rs  shared_sync_flow.rs  sync_conflict_flow.rs  sync_core.rs  updater_scaffold.rs
(+88 files in other folders)
